--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Giulia Renda">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caccia al tesoro CCS 2020</title>
+    <title>Caccia al tesoro CCS 2021</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
@@ -13,43 +13,20 @@
 <body id="start-form">
 <div class="main-nav">
     <a href="https://associazionebarbablu.it/?page_id=1449" target="_blank"><img src="images/logoccs.png" alt="logo cesena comics" id="logo-ccs"></a>
-    <a type="button" id="aiuto-btn" data-toggle="modal" data-target="#aiutoModal"><i class="fas fa-info-circle"></i></a>
 </div>
-<!-- Modal -->
-<div class="modal fade" id="aiutoModal" tabindex="-1" aria-labelledby="aiutoModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Se ti trovi qui per caso e hai voglia di sapere di cosa si tratta clicca <a href="" target="_blank">qui</a>.<br>
-                    Il progetto fa parte degli eventi del festival <a href="" target="_blank">Cesena Comics & Stories 2020</a>.
-                </p>
-                <hr>
-                <p>Per problemi tecnici contattare: <a href="tel:+393492451208" target="_blank">+39 349 2451208</a> (Andrea)</p>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end Modal -->
+
     <div class="user">
         <header class="user__header">
-            <h1 class="user__title">SCOPRI COSA TI ASPETTA!</h1>
+            <h1 class="user__title" STYLE="background-color: red">FRASE DA DEFINIRE</h1>
         </header>
 
         <form class="form" method="get" onsubmit="myFunction()">
-            <div class="form__group">
-                <input type="text" placeholder="colore" class="form__input" id="color" required/>
-            </div>
 
             <div class="form__group">
                 <input type="password" placeholder="password" class="form__input" id="pwd" required/>
             </div>
 
-            <button class="btn" type="submit">VAI</button>
+            <button class="btn" type="submit">CONTROLLA</button>
         </form>
     </div>
 
