--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="user">
         <header class="user__header">
-            <h1 class="user__title" STYLE="background-color: red">FRASE DA DEFINIRE</h1>
+            <h1 class="user__title" STYLE="background-color: red">disattiva la Macchina di Fine di Mondo</h1>
         </header>
 
         <form class="form" method="get" onsubmit="myFunction()">
