landing page fix

--- a/landing.html
+++ b/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="success">
 <head>
     <meta charset="UTF-8">
     <title>Succes</title>
@@ -9,12 +9,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="bg">
-<img src="images/Boiler.gif">
-</div>
 <header class="overlay">
-    <h1>IL MONDO è SALVO</h1>
-    <h2>macchinario <i>Fine del Mondo</i> disattivato</h2>
+    <h1>IL MONDO È SALVO</h1>
+    <h3>macchinario <i>Fine del Mondo</i> disattivato</h3>
 </header>
 </body>
 </html>
