--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="user">
         <header class="user__header">
-            <h1 class="user__title" STYLE="background-color: red">disattiva la Macchina di Fine di Mondo</h1>
+            <h1 class="user__title">DISATTIVA LA <I>MACCHINA DI FINE DI MONDO</I></h1>
         </header>
 
         <form class="form" method="get" onsubmit="myFunction()">
@@ -26,7 +26,7 @@
                 <input type="password" placeholder="password" class="form__input" id="pwd" required/>
             </div>
 
-            <button class="btn" type="submit">CONTROLLA</button>
+            <button class="btn" type="submit">ENTER</button>
         </form>
     </div>
 
