--- a/landing.html
+++ b/landing.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<header class="overlay">
-    <h1>IL MONDO È SALVO</h1>
-    <h3>macchinario <i>Fine del Mondo</i> disattivato</h3>
-</header>
+<div class="overlay">
+    <h2 id="title">IL MONDO È SALVO</h2>
+    <h4 id="subt"><i>Macchina di Fine di Mondo </i>disattivata</h4>
+</div>
 </body>
 </html>
