--- a/landing.html
+++ b/landing.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="overlay">
-    <h2 id="title">IL MONDO È SALVO</h2>
-    <h4 id="subt"><i>Macchina di Fine di Mondo </i>disattivata</h4>
+    <h2 id="title">IL MONDO È SALVO!</h2>
+    <h4><i>Macchina di Fine di Mondo </i>disattivata</h4>
 </div>
 </body>
 </html>
