--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="user">
         <header class="user__header">
-            <h1 class="user__title">DISATTIVA LA <I>MACCHINA DI FINE DI MONDO</I></h1>
+            <h1 class="user__title">DISATTIVA LA <i>MACCHINA DI FINE DI MONDO</i></h1>
         </header>
 
         <form class="form" method="get" onsubmit="myFunction()">
